--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,3 +6,12 @@ $light-color: #f4f4f4;
 $dark-color: #333;
 $medium-color: #ccc;
 $bg-image: url("/dist/img/showcase.jpg");
+
+// set-text-color function
+@function set-text-color($color) {
+  @if (lightness($color) > 50) {
+    @return #333;
+  } @else {
+    @return #fff;
+  }
+}
