--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,6 +39,8 @@ img {
   color: #fff;
   text-transform: uppercase;
   font-weight: bold;
+  border: 1px solid $medium-color;
+  padding: 0.5rem;
 }
 
 // Main Nav
@@ -93,9 +95,12 @@ img {
     }
   }
 
-  // &-inner {
-  //   color: #fff;
-  // }
+  &-inner {
+    background: $bg-image no-repeat 20% 30% / cover;
+    height: 5.5rem;
+    color: #fff;
+    border-bottom: 2px solid $main-color;
+  }
 }
 
 // Home Sections
@@ -105,7 +110,7 @@ img {
     .specials {
       margin-top: 3rem;
       display: grid;
-      grid-gap: 2rem;
+      gap: 2rem;
       grid-template-columns: repeat(4, 1fr);
 
       .fas,
@@ -152,7 +157,7 @@ img {
     .process {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-gap: 2rem;
+      gap: 2rem;
       text-align: center;
 
       &-step {
@@ -161,6 +166,7 @@ img {
         right: 0;
         font-size: 28px;
         background: $main-color;
+        color: set-text-color($main-color);
         border-radius: 50%;
         height: 15px;
         width: 15px;
@@ -172,7 +178,7 @@ img {
       &-icon {
         border-radius: 50%;
         background: $dark-color;
-        color: #fff;
+        color: set-text-color($dark-color);
         padding: 2rem;
         width: 70px;
         height: 70px;
@@ -191,6 +197,145 @@ img {
             background: $dark-color;
           }
         }
+      }
+    }
+  }
+}
+
+// about section
+#about {
+  &-a {
+    // .container {
+    //   width: 1000px;
+    // }
+    .about-info {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas:
+        "bioimage bio bio"
+        "aw1 aw2 aw3";
+      gap: 1.2rem;
+    }
+
+    .bio-image {
+      grid-area: bioimage;
+      border-radius: 5%;
+      height: 250px;
+      width: 250px;
+      margin: auto;
+    }
+
+    .bio {
+      grid-area: bio;
+      border-left: 3px solid $main-color;
+      padding: 0.8rem;
+
+      p {
+        padding: 3rem 0;
+      }
+    }
+
+    .award-1 {
+      grid-area: aw1;
+    }
+    .award-2 {
+      grid-area: aw2;
+    }
+    .award-3 {
+      grid-area: aw3;
+    }
+
+    .award-1 .fas,
+    .award-2 .fas,
+    .award-3 .fas {
+      color: $main-color;
+      margin: 1 rem;
+    }
+  }
+
+  &-b {
+    .progress {
+      overflow: hidden;
+      height: 20px;
+      background: $medium-color;
+      border-radius: 5px;
+      margin-bottom: 0.6rem;
+
+      div {
+        height: 100%;
+        color: #fff;
+        text-align: center;
+        background: $main-color;
+      }
+    }
+  }
+
+  &-c {
+    .about-logos {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 2rem;
+
+      img {
+        width: 70%;
+      }
+    }
+  }
+
+  &-d {
+    .testimonials {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 0.5rem;
+
+      ul {
+        list-style: none;
+        margin-top: 1rem;
+        display: flex;
+        align-items: center;
+      }
+
+      p {
+        border: 1px solid $medium-color;
+        border-radius: 5px;
+        padding: 0.5rem;
+      }
+
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-right: 0.5rem;
+      }
+    }
+  }
+}
+
+// footer
+#main-footer {
+  background-color: $dark-color;
+  color: #fff;
+  height: 5rem;
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    height: 5rem;
+    align-items: center;
+
+    .social .fab {
+      margin-right: 1rem;
+      border: 2px #fff solid;
+      border-radius: 50%;
+      height: 20px;
+      width: 20px;
+      line-height: 20px;
+      text-align: center;
+      padding: 0.5rem;
+
+      &:hover {
+        background-color: $main-color;
+        color: set-text-color($main-color);
       }
     }
   }
