--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,7 +5,7 @@ $main-color: #ffbc00;
 $light-color: #f4f4f4;
 $dark-color: #333;
 $medium-color: #ccc;
-$bg-image: url("../img/showcase.jpg");
+$bg-image: url("../dist/img/showcase.jpg");
 
 // set-text-color function
 @function set-text-color($color) {
