--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,7 +80,7 @@ img {
 #header {
   // Header Home
   &-home {
-    background: $bg-image no-repeat center right / cover;
+    background: url(/img/showcase.jpg) no-repeat center right / cover;
     height: 100vh;
     color: #fff;
 
