--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,7 +80,8 @@ img {
 #header {
   // Header Home
   &-home {
-    background: url(/img/showcase.jpg) no-repeat center right / cover;
+    // background: url('/img/showcase.jpg') no-repeat center right / cover;
+    background-color: #333;
     height: 100vh;
     color: #fff;
 
